--- a/index.html
+++ b/index.html
@@ -8397,7 +8397,7 @@
 </div>
 
 <footer>
-	<object data="attempt.svg" type="image/svg+xml" height="50px"></object>
+	<object data="fu-cl-ed.svg" type="image/svg+xml" height="50px"></object>
 	<p>
 		<a href="https://github.com/Furman-University-Editions/">Editions, done right, for learners.</a>
 		&nbsp;&nbsp;&nbsp;
