Tweaks and edits.

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 	<span id="2#maestus" data-intext="maestus" data-perslemma="maestus" data-lemma="@" data-pos="a-s---mn-" data-shortdef="~">maestus</span>
 	<span id="2#squālidā" data-intext="squālidā" data-perslemma="squalidus" data-lemma="@" data-pos="a-s---fb-" data-shortdef="~">squālidā</span>
 	<span id="2#exorītur" data-intext="exorītur" data-perslemma="exorior" data-lemma="@" data-pos="v3spid---" data-shortdef="~">exorītur</span>
-	<span id="2#iubar" data-intext="iubar" data-perslemma="jubar" data-lemma="@" data-pos="n-s---mn-" data-shortdef="~">iubar</span>,
+	<span id="2#iubar" data-intext="iubar" data-perslemma="jubar" data-lemma="@" data-pos="n-s---na-" data-shortdef="~">iubar</span>
 </p>
 <p data-ln="3">
 	<span id="3#lūmenque" data-intext="lūmenque" data-perslemma="lumen" data-lemma="@" data-pos="n-s---na-" data-shortdef="~">lūmenque</span>
@@ -115,7 +115,7 @@
 <p data-ln="13">
 	<span id="13#cūrīs" data-intext="cūrīs" data-perslemma="cura" data-lemma="@" data-pos="n-p---fb-" data-shortdef="~">cūrīs</span>
 	<span id="13#solūtus" data-intext="solūtus" data-perslemma="solvo" data-lemma="@" data-pos="v-srppmn-" data-shortdef="~">solūtus</span>
-	<span id="13#exul" data-intext="exul" data-perslemma="exsul" data-lemma="@" data-pos="n-s---mn-" data-shortdef="~">exul</span>,
+	<span id="13#exul" data-intext="exul" data-perslemma="exsul" data-lemma="@" data-pos="n-s---mn-" data-shortdef="~">exul</span>
 	<span id="13#intrepidus" data-intext="intrepidus" data-perslemma="intrepidus" data-lemma="@" data-pos="a-s---mn-" data-shortdef="~">intrepidus</span>
 	<span id="13#vagāns" data-intext="vagāns" data-perslemma="vago" data-lemma="@" data-pos="v-sppamn-" data-shortdef="~">vagāns</span>
 </p>
