--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Seneca: OEDIPUS</title>
-	<link rel="stylesheet" href="styles2.css">
+	<link rel="stylesheet" href="styles3.css">
 </head>
 
 <body>
+
 <h1 id="title">
-	<span class="same-width">Seneca, <span style="letter-spacing:0.05rem">OEDIPUS</span></span>
+	<span class="same-width">Seneca, <i>Oedipus</i></span>
 </h1>
 
 <div id="centerer">
