--- a/index.html
+++ b/index.html
@@ -3075,7 +3075,7 @@
 	<span id="388#quod" data-intext="quod" data-perslemma="qui2" data-lemma="quī quae quod" data-pos="p-s---na-" data-shortdef="who, which">quod</span>
 	<span id="388#ūnum" data-intext="ūnum" data-perslemma="unus" data-lemma="ūnus –a –um" data-pos="a-s---na-" data-shortdef="one">ūnum</span>
 	<span id="388#scīre" data-intext="scīre" data-perslemma="scio" data-lemma="sciō scīre scīvī/sciī scītus" data-pos="v--pna---" data-shortdef="to know">scīre</span>
-	<span id="388#caelicolae" data-intext="caelicolae" data-perslemma="caelicola" data-lemma="caelicola –ae m./f." data-pos="n-p---fn-" data-shortdef="an inhabitant of heaven; a god">caelicolae</span>
+	<span id="388#caelicolae" data-intext="caelicolae" data-perslemma="caelicola" data-lemma="caelicola –ae m./f." data-pos="n-p---mn-" data-shortdef="an inhabitant of heaven; a god">caelicolae</span>
 	<span id="388#volunt" data-intext="volunt" data-perslemma="volo1" data-lemma="volō volāre volāvī volātus" data-pos="v3ppia---" data-shortdef="to fly">volunt</span>,
 </p>
 <p data-ln="389">
