--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
 	<span id="47#gravis" data-intext="gravis" data-perslemma="gravis" data-lemma="gravis grave" data-pos="a-s---mn-" data-shortdef="heavy">gravis</span>
 	<span id="47#et" data-intext="et" data-perslemma="et" data-lemma="et" data-pos="c--------" data-shortdef="and">et</span>
 	<span id="47#āter" data-intext="āter" data-perslemma="ater1" data-lemma="āter atra atrum" data-pos="a-s---mn-" data-shortdef="black">āter</span>
-	<span id="47#incubat" data-intext="incubat" data-perslemma="incubo" data-lemma="incubō –ōnis m." data-pos="v3spia---" data-shortdef="a spirit who watches over buried treasure">incubat</span>
+	<span id="47#incubat" data-intext="incubat" data-perslemma="incubo" data-lemma="incubō incubāre incubuī incubitum" data-pos="v3spia---" data-shortdef="to lie on, dwell in; attach (oneself) to">incubat</span>
 	<span id="47#terrīs" data-intext="terrīs" data-perslemma="terra" data-lemma="terra terrae f." data-pos="n-p---fd-" data-shortdef="land">terrīs</span>
 	<span id="47#vapor" data-intext="vapor" data-perslemma="vapor" data-lemma="vapor –ōris m." data-pos="n-s---mn-" data-shortdef="vapor, steam; heat">vapor</span>;
 </p>
@@ -1125,7 +1125,7 @@
 	<span id="144#armō" data-intext="armō" data-perslemma="armus" data-lemma="armus –ī m." data-pos="n-s---mb-" data-shortdef="the shoulder">armō</span>.
 </p>
 <p data-ln="145">
-	<span id="145#incubant" data-intext="incubant" data-perslemma="incubo" data-lemma="incubō –ōnis m." data-pos="v3ppia---" data-shortdef="a spirit who watches over buried treasure">incubant</span>
+	<span id="145#incubant" data-intext="incubant" data-perslemma="incubo" data-lemma="incubō incubāre incubuī incubitum" data-pos="v3ppia---" data-shortdef="to lie on, dwell in; attach (oneself) to">incubant</span>
 	<span id="145#agrīs" data-intext="agrīs" data-perslemma="ager" data-lemma="ager agrī m." data-pos="n-p---md-" data-shortdef="field">agrīs</span>
 	<span id="145#pecudēs" data-intext="pecudēs" data-perslemma="pecus2" data-lemma="pecus pecoris f." data-pos="n-p---fn-" data-shortdef="farm animals, herd">pecudēs</span>
 	<span id="145#relictae" data-intext="relictae" data-perslemma="relinquo" data-lemma="relinquō relinquere relīquī relictus" data-pos="v-prppfn-" data-shortdef="to abandon">relictae</span>;
