--- a/index.html
+++ b/index.html
@@ -1505,7 +1505,7 @@
 	<span id="203#sanguine" data-intext="sanguine" data-perslemma="sanguis" data-lemma="sanguis sanguinis m." data-pos="n-s---mb-" data-shortdef="blood">sanguine</span>
 	<span id="203#ac" data-intext="ac" data-perslemma="ac" data-lemma="ac" data-pos="c--------" data-shortdef="and in addition">ac</span>
 	<span id="203#factīs" data-intext="factīs" data-perslemma="factum" data-lemma="factum factī n." data-pos="n-p---nb-" data-shortdef="deed">factīs</span>
-	<span id="203#Creō" data-intext="Creō" data-perslemma="Creo" data-lemma="creō creāre creāvī creātus" data-pos="n-s---mn-" data-shortdef="to create, produce">Creō</span>
+	<span id="203#Creō" data-intext="Creō" data-perslemma="Creo" data-lemma="Creō Creontis m." data-pos="n-s---mn-" data-shortdef="Creon">Creō</span>
 </p>
 <p data-ln="204">
 	<span id="204#an" data-intext="an" data-perslemma="an" data-lemma="an" data-pos="c--------" data-shortdef="or, whether, if">an</span>
@@ -1521,7 +1521,7 @@
 	<span id="205#petītus" data-intext="petītus" data-perslemma="peto" data-lemma="petō petere petīvī petītus" data-pos="v-srppmn-" data-shortdef="to seek, go towards">petītus</span>
 	<span id="205#omnibus" data-intext="omnibus" data-perslemma="omnis" data-lemma="omnis omne" data-pos="a-p---nb-" data-shortdef="every; all">omnibus</span>
 	<span id="205#vōtīs" data-intext="vōtīs" data-perslemma="votum" data-lemma="vōtum vōtī n." data-pos="n-p---nb-" data-shortdef="vow">vōtīs</span>
-	<span id="205#Creō" data-intext="Creō" data-perslemma="Creo" data-lemma="creō creāre creāvī creātus" data-pos="n-s---mn-" data-shortdef="to create, produce">Creō</span>.
+	<span id="205#Creō" data-intext="Creō" data-perslemma="Creo" data-lemma="Creō Creontis m." data-pos="n-s---mn-" data-shortdef="Creon">Creō</span>.
 </p>
 </section>
 <section>
@@ -3167,7 +3167,7 @@
 <header>OEDIPUS</header>
 <p data-ln="399">
 	<span id="399#tē" data-intext="tē" data-perslemma="tu" data-lemma="tū tuī tibi tē tē" data-pos="p-s---ma-" data-shortdef="you">tē</span>,
-	<span id="399#Creō" data-intext="Creō" data-perslemma="Creo" data-lemma="creō creāre creāvī creātus" data-pos="n-s---mn-" data-shortdef="to create, produce">Creō</span>,
+	<span id="399#Creō" data-intext="Creō" data-perslemma="Creo" data-lemma="Creō Creontis m." data-pos="n-s---mn-" data-shortdef="Creon">Creō</span>,
 	<span id="399#hic" data-intext="hic" data-perslemma="hic" data-lemma="hic haec hoc" data-pos="p-s---mn-" data-shortdef="this, these">hic</span>
 	<span id="399#poscit" data-intext="poscit" data-perslemma="posco" data-lemma="poscō poscere poposcī" data-pos="v3spia---" data-shortdef="to demand">poscit</span>
 	<span id="399#labor" data-intext="labor" data-perslemma="labor2" data-lemma="labor labōris m." data-pos="n-s---mn-" data-shortdef="work">labor</span>,
