--- a/index.html
+++ b/index.html
@@ -101,13 +101,13 @@
 <p data-ln="11">
 	<span id="11#imperia" data-intext="imperia" data-perslemma="imperium" data-lemma="imperium imperiī n." data-pos="n-p---nn-" data-shortdef="command, power">imperia</span>
 	<span id="11#sīc" data-intext="sīc" data-perslemma="sic" data-lemma="sīc" data-pos="d--------" data-shortdef="thus">sīc</span>
-	<span id="11#excelsa" data-intext="excelsa" data-perslemma="excello" data-lemma="excellō excellere excelsus" data-pos="v-prppnn-" data-shortdef="to excel">excelsa</span>
+	<span id="11#excelsa" data-intext="excelsa" data-perslemma="excelsus" data-lemma="excelsus –a –um" data-pos="a-p---nn-" data-shortdef="elevated, lofty, high">excelsa</span>
 	<span id="11#Fortūnae" data-intext="Fortūnae" data-perslemma="fortuna" data-lemma="fortūna fortūnae f." data-pos="n-s---fd-" data-shortdef="fortune, chance">Fortūnae</span>
 	<span id="11#obiacent" data-intext="obiacent" data-perslemma="objaceo" data-lemma="obiaceō –iacēre –iacuī —" data-pos="v3ppia---" data-shortdef="to lie before or over against a thing">obiacent</span>.
 </p>
 <p data-ln="12">
 	<span id="12#quam" data-intext="quam" data-perslemma="quam" data-lemma="quam" data-pos="d--------" data-shortdef="than; as, how">quam</span>
-	<span id="12#bene" data-intext="bene" data-perslemma="bene" data-lemma="bene, melius (comp.), optimē (superl.)" data-pos="d--------" data-shortdef="well">bene</span>
+	<span id="12#bene" data-intext="bene" data-perslemma="bene" data-lemma="bene" data-pos="d--------" data-shortdef="well">bene</span>
 	<span id="12#parentis" data-intext="parentis" data-perslemma="parens" data-lemma="parēns parentis m./f." data-pos="n-s---mg-" data-shortdef="parent">parentis</span>
 	<span id="12#scēptra" data-intext="scēptra" data-perslemma="sceptrum" data-lemma="scēptrum –ī n." data-pos="n-p---na-" data-shortdef="royal staff; scepter">scēptra</span>
 	<span id="12#Polybī" data-intext="Polybī" data-perslemma="Polybus" data-lemma="Polybus –ī m." data-pos="n-s---mg-" data-shortdef="Polybus (name)">Polybī</span>
@@ -362,7 +362,7 @@
 <p data-ln="44">
 	<span id="44#obscūra" data-intext="obscūra" data-perslemma="obscurus" data-lemma="obscūrus –a –um" data-pos="a-s---fn-" data-shortdef="covered, dark">obscūra</span>
 	<span id="44#caelō" data-intext="caelō" data-perslemma="caelum1" data-lemma="caelum caelī n." data-pos="n-s---nb-" data-shortdef="sky, heaven">caelō</span>
-	<span id="44#lābitur" data-intext="lābitur" data-perslemma="labor1" data-lemma="labor labōris m." data-pos="v3spip---" data-shortdef="work">lābitur</span>
+	<span id="44#lābitur" data-intext="lābitur" data-perslemma="labor" data-lemma="lābor lābī lāpsus" data-pos="v3spip---" data-shortdef="to glide, slide, move">lābitur</span>
 	<span id="44#Phoebī" data-intext="Phoebī" data-perslemma="Phoebus" data-lemma="Phoebus –ī m." data-pos="n-s---mg-" data-shortdef="Phoebus">Phoebī</span>
 	<span id="44#soror" data-intext="soror" data-perslemma="soror" data-lemma="soror sorōris f." data-pos="n-s---fn-" data-shortdef="sister">soror</span>,
 </p>
@@ -996,7 +996,7 @@
 	<span id="124#interīmus" data-intext="interīmus" data-perslemma="intereo" data-lemma="intereō interīre interīvī/interiī interitus" data-pos="v1ppia---" data-shortdef="to perish">interīmus</span>,
 </p>
 <p data-ln="125">
-	<span id="125#lābimur" data-intext="lābimur" data-perslemma="labor1" data-lemma="labor labōris m." data-pos="v1ppip---" data-shortdef="work">lābimur</span>
+	<span id="125#lābimur" data-intext="lābimur" data-perslemma="labor" data-lemma="lābor lābī lāpsus" data-pos="v1ppip---" data-shortdef="to glide, slide, move">lābimur</span>
 	<span id="125#saevō" data-intext="saevō" data-perslemma="saevus" data-lemma="saevus –a –um" data-pos="a-s---nb-" data-shortdef="savage">saevō</span>
 	<span id="125#rapiente" data-intext="rapiente" data-perslemma="rapio" data-lemma="rapiō rapere rapuī raptus" data-pos="v-sppanb-" data-shortdef="to seize, carry off">rapiente</span>
 	<span id="125#fātō" data-intext="fātō" data-perslemma="fatum" data-lemma="fātum –ī n." data-pos="n-s---nb-" data-shortdef="destiny, fate">fātō</span>.
@@ -1081,7 +1081,7 @@
 	<span id="137#cornū" data-intext="cornū" data-perslemma="cornu" data-lemma="cornū cornūs f." data-pos="n-s---nb-" data-shortdef="horn">cornū</span>
 </p>
 <p data-ln="138">
-	<span id="138#lābitur" data-intext="lābitur" data-perslemma="labor1" data-lemma="labor labōris m." data-pos="v3spip---" data-shortdef="work">lābitur</span>
+	<span id="138#lābitur" data-intext="lābitur" data-perslemma="labor" data-lemma="lābor lābī lāpsus" data-pos="v3spip---" data-shortdef="to glide, slide, move">lābitur</span>
 	<span id="138#sēgnis" data-intext="sēgnis" data-perslemma="segnis" data-lemma="sēgnis sēgne" data-pos="a-s---mn-" data-shortdef="slow">sēgnis</span>.
 	<span id="138#patuit" data-intext="patuit" data-perslemma="pateo" data-lemma="pateō patēre patuī" data-pos="v3sria---" data-shortdef="to be open">patuit</span>
 	<span id="138#sub" data-intext="sub" data-perslemma="sub" data-lemma="sub" data-pos="r--------" data-shortdef="under">sub</span>
@@ -3934,7 +3934,7 @@
 	<span id="513#at" data-intext="at" data-perslemma="at" data-lemma="at or ast" data-pos="c--------" data-shortdef="but">at</span>
 	<span id="513#scēptra" data-intext="scēptra" data-perslemma="sceptrum" data-lemma="scēptrum –ī n." data-pos="n-p---nn-" data-shortdef="royal staff; scepter">scēptra</span>
 	<span id="513#moveant" data-intext="moveant" data-perslemma="moveo" data-lemma="moveō movēre mōvī mōtus" data-pos="v3ppsa---" data-shortdef="to move">moveant</span>
-	<span id="513#lāpsa" data-intext="lāpsa" data-perslemma="labor1" data-lemma="labor labōris m." data-pos="v-prppnn-" data-shortdef="work">lāpsa</span>
+	<span id="513#lāpsa" data-intext="lāpsa" data-perslemma="labor" data-lemma="lābor lābī lāpsus" data-pos="v-prppnn-" data-shortdef="to glide, slide, move">lāpsa</span>
 	<span id="513#cognātae" data-intext="cognātae" data-perslemma="cognatus" data-lemma="cognātus –a –um" data-pos="a-s---fg-" data-shortdef="near by birth">cognātae</span>
 	<span id="513#domūs" data-intext="domūs" data-perslemma="domus" data-lemma="domus domī f." data-pos="n-s---fg-" data-shortdef="house, home">domūs</span>.
 </p>
@@ -7854,7 +7854,7 @@
 <section>
 <header>OEDIPUS</header>
 <p data-ln="998">
-	<span id="998#bene" data-intext="bene" data-perslemma="bene" data-lemma="bene, melius (comp.), optimē (superl.)" data-pos="d--------" data-shortdef="well">bene</span>
+	<span id="998#bene" data-intext="bene" data-perslemma="bene" data-lemma="bene" data-pos="d--------" data-shortdef="well">bene</span>
 	<span id="998#habet" data-intext="habet" data-perslemma="habeo" data-lemma="habeō habēre habuī habitus" data-pos="v3spia---" data-shortdef="to have, hold">habet</span>,
 	<span id="998#perāctum" data-intext="perāctum" data-perslemma="perago" data-lemma="peragō peragere perēgī perāctum" data-pos="v-srppnn-" data-shortdef="to finish">perāctum</span>
 	<span id="998#est" data-intext="est" data-perslemma="sum" data-lemma="sum esse fuī futūrus" data-pos="v3spia---" data-shortdef="to be">est</span>:
