Click and mouseover added.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </h1>
 
 <div id="centerer">
-	<ul id="info"><li id="infobox">Click on a word for information</li></ul>
+	<ul id="info"><li id="infobox">Mouseover a word for information. Click for dictionary lookup.</li></ul>
 </div>
 
 <div id="container">
@@ -8406,7 +8406,7 @@
 	</p>
 </footer>
 
-<script src="info-l.js"></script>
+<script src="info-l2.js"></script>
 
 </body>
 </html>
