--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
 	<span id="39#sed" data-intext="sed" data-perslemma="sed" data-lemma="sed" data-pos="c--------" data-shortdef="but">sed</span>
 	<span id="39#ignēs" data-intext="ignēs" data-perslemma="ignis" data-lemma="ignis ignis m." data-pos="n-p---ma-" data-shortdef="fire">ignēs</span>
 	<span id="39#auget" data-intext="auget" data-perslemma="augeo" data-lemma="augeō augēre auxī auctus" data-pos="v3spia---" data-shortdef="to increase">auget</span>
-	<span id="39#aestifērī" data-intext="aestifērī" data-perslemma="aestifer" data-lemma="aestifer –a –um" data-pos="a-s---mg-" data-shortdef="causing heat">aestifērī</span>
+	<span id="39#aestiferī" data-intext="aestiferī" data-perslemma="aestifer" data-lemma="aestifer –a –um" data-pos="a-s---mg-" data-shortdef="causing heat">aestiferī</span>
 	<span id="39#canis" data-intext="canis" data-perslemma="canis1" data-lemma="canis canis m./f." data-pos="n-s---mg-" data-shortdef="dog">canis</span>
 </p>
 <p data-ln="40">
