--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 <p data-ln="19">
 	<span id="19#prō" data-intext="prō" data-perslemma="pro1" data-lemma="prō" data-pos="r--------" data-shortdef="on behalf of, for, instead of, in accordance with (+ abl.)">prō</span>
 	<span id="19#misera" data-intext="misera" data-perslemma="miser" data-lemma="miser misera miserum" data-pos="a-s---fn-" data-shortdef="wretched, pitiable">misera</span>
-	<span id="19#pietās" data-intext="pietās" data-perslemma="pietas1" data-lemma="pietās pietātis f." data-pos="n-s---fn-" data-shortdef="devotion">pietās</span>!
+	<span id="19#pietās" data-intext="pietās" data-perslemma="pietas1" data-lemma="pietās pietātis f." data-pos="n-s---fn-" data-shortdef="devotion">pietās</span>,
 	<span id="19#ēloquī" data-intext="ēloquī" data-perslemma="eloquor" data-lemma="ēloquor ēloquī ēlocūtus" data-pos="v--pnp---" data-shortdef="to speak out, express">ēloquī</span>
 	<span id="19#fātum" data-intext="fātum" data-perslemma="fatum" data-lemma="fātum –ī n." data-pos="n-s---na-" data-shortdef="destiny, fate">fātum</span>
 	<span id="19#pudet" data-intext="pudet" data-perslemma="pudeo" data-lemma="pudeō –ēre –duī –ditus" data-pos="v3spia---" data-shortdef="to make ashamed">pudet</span>:
@@ -233,8 +233,7 @@
 	<span id="27#mihi" data-intext="mihi" data-perslemma="ego" data-lemma="egō meī mihi mē mē" data-pos="p-s---md-" data-shortdef="I, me">mihi</span>.
 </p>
 <p data-ln="28">
-	<span id="28#iam" data-intext="iam" data-perslemma="jam" data-lemma="iam" data-pos="d--------" data-shortdef="now; already">iam</span>
-	<span id="28#iam2" data-intext="iam" data-perslemma="jam" data-lemma="iam" data-pos="d--------" data-shortdef="now; already">iam</span>
+	<span id="28#iamiam" data-intext="iamiam" data-perslemma="jam" data-lemma="iamiam" data-pos="d--------" data-shortdef="now; already">iamiam</span>
 	<span id="28#aliquid" data-intext="aliquid" data-perslemma="aliquis" data-lemma="aliquis aliquid and aliquī aliqua aliquod" data-pos="p-s---na-" data-shortdef="someone, something; some, any">aliquid</span>
 	<span id="28#in" data-intext="in" data-perslemma="in" data-lemma="in" data-pos="r--------" data-shortdef="in, on">in</span>
 	<span id="28#nōs" data-intext="nōs" data-perslemma="nos" data-lemma="nōs nostrum/nostrī" data-pos="p-p---ma-" data-shortdef="we; us">nōs</span>
@@ -285,7 +284,7 @@
 </p>
 <p data-ln="34">
 	<span id="34#incolumis" data-intext="incolumis" data-perslemma="incolumis" data-lemma="incolumis incolume" data-pos="a-s---mn-" data-shortdef="uninjured">incolumis</span>
-	<span id="34#astō" data-intext="astō" data-perslemma="asto" data-lemma="astō astāre astitī" data-pos="v1spia---" data-shortdef="to stand near">astō</span> —
+	<span id="34#astō" data-intext="astō" data-perslemma="asto" data-lemma="astō astāre astitī" data-pos="v1spia---" data-shortdef="to stand near">astō</span>,
 	<span id="34#scīlicet" data-intext="scīlicet" data-perslemma="scilicet" data-lemma="scīlicet" data-pos="d--------" data-shortdef="certainly">scīlicet</span>
 	<span id="34#Phoebī" data-intext="Phoebī" data-perslemma="Phoebus" data-lemma="Phoebus –ī m." data-pos="n-s---mg-" data-shortdef="Phoebus">Phoebī</span>
 	<span id="34#reus" data-intext="reus" data-perslemma="reus" data-lemma="reus reī m." data-pos="n-s---mn-" data-shortdef="defendant">reus</span>.
@@ -405,8 +404,8 @@
 	<span id="49#Cerēs" data-intext="Cerēs" data-perslemma="Ceres" data-lemma="Cerēs Cereris f." data-pos="n-s---fn-" data-shortdef="wheat; Ceres">Cerēs</span>
 </p>
 <p data-ln="50">
-	<span id="50#adulta" data-intext="adulta" data-perslemma="adolesco" data-lemma="adolēscō adolescere adolēvī adultus" data-pos="v-srppfn-" data-shortdef="grow up">adulta</span>,
-	<span id="50#et" data-intext="et" data-perslemma="et" data-lemma="et" data-pos="c--------" data-shortdef="and">et</span>
+	<span id="50#adulta" data-intext="adulta" data-perslemma="adolesco" data-lemma="adolēscō adolescere adolēvī adultus" data-pos="v-srppfn-" data-shortdef="grow up">adulta</span>
+	<span id="50#et" data-intext="et" data-perslemma="et" data-lemma="et" data-pos="c--------" data-shortdef="and">et</span>,
 	<span id="50#altīs" data-intext="altīs" data-perslemma="altus1" data-lemma="altus –a –um" data-pos="a-p---fb-" data-shortdef="tall, high; deep">altīs</span>
 	<span id="50#flāva" data-intext="flāva" data-perslemma="flavus" data-lemma="flāvus –a –um" data-pos="a-s---fn-" data-shortdef="golden, yellow">flāva</span>
 	<span id="50#cum" data-intext="cum" data-perslemma="cum" data-lemma="cum" data-pos="c--------" data-shortdef="with (prep. +abl.)">cum</span>
@@ -525,7 +524,7 @@
 	<span id="64#flammīs" data-intext="flammīs" data-perslemma="flamma1" data-lemma="flamma flammae f." data-pos="n-p---fb-" data-shortdef="flame">flammīs</span>
 	<span id="64#corpora" data-intext="corpora" data-perslemma="corpus" data-lemma="corpus corporis n." data-pos="n-p---na-" data-shortdef="body">corpora</span>
 	<span id="64#aliēnīs" data-intext="aliēnīs" data-perslemma="alienus" data-lemma="aliēnus –a –um" data-pos="a-p---fb-" data-shortdef="strange, unrelated, another’s">aliēnīs</span>
-	<span id="64#cremant" data-intext="cremant" data-perslemma="cremo" data-lemma="cremō cremāre cremāvī cremātus" data-pos="v3ppia---" data-shortdef="to burn">cremant</span>;
+	<span id="64#cremant" data-intext="cremant" data-perslemma="cremo" data-lemma="cremō cremāre cremāvī cremātus" data-pos="v3ppia---" data-shortdef="to burn">cremant</span>:
 </p>
 <p data-ln="65">
 	<span id="65#dīripitur" data-intext="dīripitur" data-perslemma="diripio" data-lemma="dīripiō –ere –ripuī –reptus" data-pos="v3spip---" data-shortdef="to tear apart or off; snatch">dīripitur</span>
@@ -541,12 +540,12 @@
 	<span id="66#tumulī" data-intext="tumulī" data-perslemma="tumulus" data-lemma="tumulus tumulī m." data-pos="n-p---mn-" data-shortdef="mound">tumulī</span>
 	<span id="66#lēcta" data-intext="lēcta" data-perslemma="lego2" data-lemma="legō legere lēgī lēctus" data-pos="v-prppna-" data-shortdef="to gather; read">lēcta</span>
 	<span id="66#discrētī" data-intext="discrētī" data-perslemma="discerno" data-lemma="discernō –ere –crēvī –crētus" data-pos="v-prppmn-" data-shortdef="to distinguish one thing from another; determine">discrētī</span>
-	<span id="66#tegunt" data-intext="tegunt" data-perslemma="tego" data-lemma="tegō tegere tēxī tēctus" data-pos="v3ppia---" data-shortdef="to cover">tegunt</span>:
+	<span id="66#tegunt" data-intext="tegunt" data-perslemma="tego" data-lemma="tegō tegere tēxī tēctus" data-pos="v3ppia---" data-shortdef="to cover">tegunt</span>;
 </p>
 <p data-ln="67">
 	<span id="67#ārsisse" data-intext="ārsisse" data-perslemma="ardeo" data-lemma="ārdeō ārdēre ārsī ārsum" data-pos="v--rna---" data-shortdef="to burn, glow">ārsisse</span>
 	<span id="67#satis" data-intext="satis" data-perslemma="satis" data-lemma="satis or sat (comp. satius)" data-pos="a-s---nn-" data-shortdef="enough">satis</span>
-	<span id="67#est" data-intext="est" data-perslemma="sum" data-lemma="sum esse fuī futūrus" data-pos="v3spia---" data-shortdef="to be">est</span> —
+	<span id="67#est" data-intext="est" data-perslemma="sum" data-lemma="sum esse fuī futūrus" data-pos="v3spia---" data-shortdef="to be">est</span>.
 	<span id="67#pars" data-intext="pars" data-perslemma="pars" data-lemma="pars partis f." data-pos="n-s---fn-" data-shortdef="part, portion">pars</span>
 	<span id="67#quota" data-intext="quota" data-perslemma="quotus" data-lemma="quotus –a –um" data-pos="a-s---fn-" data-shortdef="of what number">quota</span>
 	<span id="67#in" data-intext="in" data-perslemma="in" data-lemma="in" data-pos="r--------" data-shortdef="in, on">in</span>
@@ -569,11 +568,11 @@
 	<span id="69#ars" data-intext="ars" data-perslemma="ars" data-lemma="ars artis f." data-pos="n-s---fn-" data-shortdef="skill">ars</span>
 	<span id="69#ūlla" data-intext="ūlla" data-perslemma="ullus" data-lemma="ūllus –a –um" data-pos="a-s---fn-" data-shortdef="any">ūlla</span>
 	<span id="69#correptōs" data-intext="correptōs" data-perslemma="corripio" data-lemma="corripiō corripere corripuī correptum" data-pos="v-prppma-" data-shortdef="to seize, plunder; rebuke">correptōs</span>
-	<span id="69#levant" data-intext="levant" data-perslemma="levo1" data-lemma="levō levāre levāvī levātus" data-pos="v3ppia---" data-shortdef="to raise; make light">levant</span>:
+	<span id="69#levant" data-intext="levant" data-perslemma="levo1" data-lemma="levō levāre levāvī levātus" data-pos="v3ppia---" data-shortdef="to raise; make light">levant</span>.
 </p>
 <p data-ln="70">
 	<span id="70#cadunt" data-intext="cadunt" data-perslemma="cado" data-lemma="cadō cadere cecidī cāsum" data-pos="v3ppia---" data-shortdef="to fall">cadunt</span>
-	<span id="70#medentēs" data-intext="medentēs" data-perslemma="medeor" data-lemma="medeor mederi" data-pos="v-pppamn-" data-shortdef="to heal">medentēs</span>,
+	<span id="70#medentēs" data-intext="medentēs" data-perslemma="medeor" data-lemma="medeor mederi" data-pos="v-pppamn-" data-shortdef="to heal">medentēs</span>:
 	<span id="70#morbus" data-intext="morbus" data-perslemma="morbus" data-lemma="morbus morbī m." data-pos="n-s---mn-" data-shortdef="sickness, disease">morbus</span>
 	<span id="70#auxilium" data-intext="auxilium" data-perslemma="auxilium" data-lemma="auxilium auxilī n." data-pos="n-s---na-" data-shortdef="aid, help">auxilium</span>
 	<span id="70#trahit" data-intext="trahit" data-perslemma="traho" data-lemma="trahō trahere trāxī tractus" data-pos="v3spia---" data-shortdef="to drag">trahit</span>.
@@ -629,7 +628,7 @@
 <p data-ln="77">
 	<span id="77#mors" data-intext="mors" data-perslemma="mors" data-lemma="mors mortis f." data-pos="n-s---fn-" data-shortdef="death">mors</span>
 	<span id="77#tam" data-intext="tam" data-perslemma="tam" data-lemma="tam" data-pos="d--------" data-shortdef="so">tam</span>
-	<span id="77#parāta" data-intext="parāta" data-perslemma="paro1" data-lemma="parō parāre parāvī parātus" data-pos="v-srppfn-" data-shortdef="to prepare">parāta</span>!
+	<span id="77#parāta" data-intext="parāta" data-perslemma="paro1" data-lemma="parō parāre parāvī parātus" data-pos="v-srppfn-" data-shortdef="to prepare">parāta</span>.
 	<span id="77#sperne" data-intext="sperne" data-perslemma="sperno" data-lemma="spernō spernere sprēvī sprētum" data-pos="v2spma---" data-shortdef="to reject">sperne</span>
 	<span id="77#lētālī" data-intext="lētālī" data-perslemma="letalis" data-lemma="lētālis –e" data-pos="a-s---fb-" data-shortdef="deadly, fatal">lētālī</span>
 	<span id="77#manū" data-intext="manū" data-perslemma="manus1" data-lemma="manus manūs f." data-pos="n-s---fb-" data-shortdef="hand; band of men">manū</span>
@@ -654,7 +653,7 @@
 	<span id="80#hospes" data-intext="hospes" data-perslemma="hospes" data-lemma="hospes hospitis m." data-pos="n-s---mn-" data-shortdef="guest; stranger; host">hospes</span>,
 	<span id="80#profuge" data-intext="profuge" data-perslemma="profugio" data-lemma="profugiō profugere profūgī" data-pos="v2spma---" data-shortdef="to flee">profuge</span>
 	<span id="80#iamdūdum" data-intext="iamdūdum" data-perslemma="jamdudum" data-lemma="iamdūdum or iam dudum" data-pos="d--------" data-shortdef="now for a long time (+ present tense)">iamdūdum</span>
-	<span id="80#ōcius" data-intext="ōcius" data-perslemma="ocius" data-lemma="ōcius" data-pos="d-------c" data-shortdef="more quickly; (in commands) immediately">ōcius</span> —
+	<span id="80#ōcius" data-intext="ōcius" data-perslemma="ocius" data-lemma="ōcius" data-pos="d-------c" data-shortdef="more quickly; (in commands) immediately">ōcius</span>
 </p>
 <p data-ln="81">
 	<span id="81#vel" data-intext="vel" data-perslemma="vel" data-lemma="vel" data-pos="d--------" data-shortdef="or">vel</span>
@@ -5165,8 +5164,7 @@
 	<span id="667#gravis" data-intext="gravis" data-perslemma="gravis" data-lemma="gravis grave" data-pos="a-s---mn-" data-shortdef="heavy">gravis</span>?
 </p>
 <p data-ln="668">
-	— <span id="668#iam" data-intext="iam" data-perslemma="jam" data-lemma="iam" data-pos="d--------" data-shortdef="now; already">iam</span>
-	<span id="668#iam2" data-intext="iam" data-perslemma="jam" data-lemma="iam" data-pos="d--------" data-shortdef="now; already">iam</span>
+	— <span id="668#iamiam" data-intext="iamiam" data-perslemma="jam" data-lemma="iamiam" data-pos="d--------" data-shortdef="now; already">iamiam</span>
 	<span id="668#tenēmus" data-intext="tenēmus" data-perslemma="teneo" data-lemma="teneō tenēre tenuī tentus" data-pos="v1ppia---" data-shortdef="to hold">tenēmus</span>
 	<span id="668#callidī" data-intext="callidī" data-perslemma="callidus" data-lemma="callidus –a –um" data-pos="a-s---mg-" data-shortdef="clever">callidī</span>
 	<span id="668#sociōs" data-intext="sociōs" data-perslemma="socius" data-lemma="socius –a –um" data-pos="n-p---ma-" data-shortdef="allied">sociōs</span>
