--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
 	<span id="27#mihi" data-intext="mihi" data-perslemma="ego" data-lemma="egō meī mihi mē mē" data-pos="p-s---md-" data-shortdef="I, me">mihi</span>.
 </p>
 <p data-ln="28">
-	<span id="28#iamiam" data-intext="iamiam" data-perslemma="jam" data-lemma="iamiam" data-pos="d--------" data-shortdef="now; already">iamiam</span>
+	<span id="28#iamiam" data-intext="iamiam" data-perslemma="jamjam" data-lemma="iamiam" data-pos="d--------" data-shortdef="now; already">iamiam</span>
 	<span id="28#aliquid" data-intext="aliquid" data-perslemma="aliquis" data-lemma="aliquis aliquid and aliquī aliqua aliquod" data-pos="p-s---na-" data-shortdef="someone, something; some, any">aliquid</span>
 	<span id="28#in" data-intext="in" data-perslemma="in" data-lemma="in" data-pos="r--------" data-shortdef="in, on">in</span>
 	<span id="28#nōs" data-intext="nōs" data-perslemma="nos" data-lemma="nōs nostrum/nostrī" data-pos="p-p---ma-" data-shortdef="we; us">nōs</span>
@@ -5164,7 +5164,7 @@
 	<span id="667#gravis" data-intext="gravis" data-perslemma="gravis" data-lemma="gravis grave" data-pos="a-s---mn-" data-shortdef="heavy">gravis</span>?
 </p>
 <p data-ln="668">
-	— <span id="668#iamiam" data-intext="iamiam" data-perslemma="jam" data-lemma="iamiam" data-pos="d--------" data-shortdef="now; already">iamiam</span>
+	— <span id="668#iamiam" data-intext="iamiam" data-perslemma="jamjam" data-lemma="iamiam" data-pos="d--------" data-shortdef="now; already">iamiam</span>
 	<span id="668#tenēmus" data-intext="tenēmus" data-perslemma="teneo" data-lemma="teneō tenēre tenuī tentus" data-pos="v1ppia---" data-shortdef="to hold">tenēmus</span>
 	<span id="668#callidī" data-intext="callidī" data-perslemma="callidus" data-lemma="callidus –a –um" data-pos="a-s---mg-" data-shortdef="clever">callidī</span>
 	<span id="668#sociōs" data-intext="sociōs" data-perslemma="socius" data-lemma="socius –a –um" data-pos="n-p---ma-" data-shortdef="allied">sociōs</span>
