--- a/index.html
+++ b/index.html
@@ -678,7 +678,7 @@
 	<span id="82#reor" data-intext="reor" data-perslemma="reor" data-lemma="reor rērī ratus" data-pos="v1spid---" data-shortdef="to think">reor</span>,
 </p>
 <p data-ln="83">
-	<span id="83#adversa" data-intext="adversa" data-perslemma="adversus" data-lemma="adversus –a –um" data-pos="a-p---nn-" data-shortdef="opposed; opposite; towards">adversa</span>
+	<span id="83#adversa" data-intext="adversa" data-perslemma="adversus" data-lemma="adversus –a –um" data-pos="a-p---na-" data-shortdef="opposed; opposite; towards">adversa</span>
 	<span id="83#capere" data-intext="capere" data-perslemma="capio" data-lemma="capiō capere cēpī captus" data-pos="v--pna---" data-shortdef="to seize">capere</span>,
 	<span id="83#quōque" data-intext="quōque" data-perslemma="qui" data-lemma="quī quae quod" data-pos="p-s---nb-" data-shortdef="who, which">quōque</span>
 	<span id="83#sit" data-intext="sit" data-perslemma="sum" data-lemma="sum esse fuī futūrus" data-pos="v3spsa---" data-shortdef="to be">sit</span>
